# ManoSync

./: CMakeLists.txt  main.cpp  main.h
